--- a/main.html
+++ b/main.html
@@ -1,40 +1,48 @@
 <!DOCTYPE html>
 <html>
-<head>
-    
+  <head>
     <title>Website</title>
     <style>
-        body{
-            background-color: aliceblue;
-        }
-        .rrrr{
+      body {
+        background-color: aliceblue;
+      }
+      .rrrr {
         display: flex;
-    } 
-        .navbar{
-  display: flex;
-  justify-content: flex-start;
-}
-.navbar>a{
-  padding: 20px 80px;
-  text-decoration:none;
-  font-size: 20px;
-  width: 100%;
-}
+      }
+      .navbar {
+        display: flex;
+        justify-content: flex-start;
+      }
+      .navbar > a {
+        padding: 20px 80px;
+        text-decoration: none;
+        font-size: 20px;
+        width: 100%;
+      }
     </style>
-</head>
-<body>
-</div>
-<div class="navbar">
-  <a href="ram.html">home</a>
-  <a href="shyam.HTML">Course</a>
-  <a href="balram.HTML">Faculty</a>
-  <a href="sohan.HTML" class="help-nav">Help</a>
-</div>
-    <img src="jagat jeet.jpg" alt="niraj" width="100%" length="20%">
-    <div class="rrrr">
-      <div><IMG SRC="jagat jeet.jpg"alt="ght"width="80%"></div>
-      <div>
-          <h2 align="left"><i>HELLO! ewrreyth hguyib virkj </i></h2></div>
+  </head>
+  <body>
+    <div class="navbar">
+      <div class="logo"></div>
+      <div class="nav-icons">
+        <a href="ram.html">home</a>
+        <a href="shyam.HTML">Course</a>
+        <a href="balram.HTML">Faculty</a>
+        <a href="sohan.HTML" class="help-nav">Help</a>
+      </div>
+      <div class="social-icons">
+        <span><img src="https://img.icons8.com/ios-glyphs/30/000000/facebook-new.png"/></span>
+        <span><img src="https://img.icons8.com/ios-glyphs/30/000000/twitter--v1.png"/></span>
+        <span>I</span>
+        <span>Y</span>
+      </div>
     </div>
-    </body>
+    <img src="jagat jeet.jpg" alt="niraj" width="100%" length="20%" />
+    <div class="rrrr">
+      <div><img src="jagat jeet.jpg" alt="ght" width="80%" /></div>
+      <div>
+        <h2 align="left"><i>HELLO! ewrreyth hguyib virkj </i></h2>
+      </div>
+    </div>
+  </body>
 </html>
