--- a/main.html
+++ b/main.html
@@ -6,6 +6,10 @@
       body {
         background-color: aliceblue;
       }
+      social-icons{display: contents;
+        justify-content: end;
+        
+      }
       .rrrr {
         display: flex;
       }
